--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,21 @@
-spring.datasource.url=jdbc:postgresql://localhost/euro
-spring.datasource.username=postgres
-spring.datasource.password=1111
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
+
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create-drop
+
 spring.freemarker.expose-request-attributes=true
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
 
-spring.session.jdbc.initialize-schema=always
-spring.session.jdbc.table-name=SPRING_SESSION
+
+#spring.session.jdbc.initialize-schema=always
+#spring.session.jdbc.table-name=SPRING_SESSION
+
 
 recaptcha.secret=6LctgpwUAAAAAPBaRlq3t7SP_-S32ryA7CG2pHt8
 
@@ -21,4 +26,6 @@ spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-mail.debug=false
+mail.debug=true
+
+myPort.value=eurotrip-dev.herokuapp.com/
