--- a/pom.xml
+++ b/pom.xml
@@ -48,10 +48,17 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <!--mail-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mail</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-mail</artifactId>-->
+        <!--</dependency>-->
+
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/com.sendgrid/sendgrid-java &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>com.sendgrid</groupId>-->
+            <!--<artifactId>sendgrid-java</artifactId>-->
+            <!--<version>4.1.2</version>-->
+        <!--</dependency>-->
 
         <!--Session-->
         <!--<dependency>-->
