--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,14 @@ spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
 
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/euro
+#spring.datasource.username=postgres
+#spring.datasource.password=1111
+
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 
 spring.freemarker.expose-request-attributes=true
 
@@ -16,16 +21,16 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
 #spring.session.jdbc.initialize-schema=always
 #spring.session.jdbc.table-name=SPRING_SESSION
 
-
 recaptcha.secret=6LctgpwUAAAAAPBaRlq3t7SP_-S32ryA7CG2pHt8
 
-spring.mail.host=smtp.gmail.com
-spring.mail.username=eroadto@gmail.com
-spring.mail.password=sebetgr5476543342fdsg
-spring.mail.port=587
-spring.mail.protocol=smtp
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-mail.debug=true
 
-myPort.value=eurotrip-dev.herokuapp.com/
+#spring.mail.host=smtp.gmail.com
+#spring.mail.username=eroadto@gmail.com
+#spring.mail.password=sebetgr5476543342fdsg
+#spring.mail.port=587
+#spring.mail.protocol=smtp
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#mail.debug=true
+
+
