--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,32 @@
 
     <properties>
         <java.version>1.8</java.version>
-
     </properties>
+
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <spring.profile>dev</spring.profile>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>heroku</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>env.DYNO</name>
+                </property>
+            </activation>
+            <properties>
+                <spring.profile>heroku</spring.profile>
+            </properties>
+        </profile>
+    </profiles>
 
     <dependencies>
 
@@ -40,6 +64,7 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>9.4-1201-jdbc4</version>
+            <scope>provided</scope>
         </dependency>
 
         <!--security-->
