--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.profiles.active=@spring.profile@
 
-spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
@@ -10,8 +9,8 @@ spring.freemarker.expose-request-attributes=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
 
 
-#spring.session.jdbc.initialize-schema=always
-#spring.session.jdbc.table-name=SPRING_SESSION
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name=SPRING_SESSION
 
 recaptcha.secret=6LctgpwUAAAAAPBaRlq3t7SP_-S32ryA7CG2pHt8
 
