--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/euro
 spring.datasource.username=postgres
-#spring.datasource.password=root
-spring.datasource.password=1111
+spring.datasource.password=root
 
 
 spring.jpa.show-sql=true
